# po1ymarket

./: .env.example  .gitignore  README.md  fastcontribute.md  git-collaboration.md  task-board.md
app/: api.py  config.py  dependencies.py  models.py
asset/: base.md
backend/: README.md  nest-cli.json  package-lock.json  package.json  pyproject.toml
backend/app/: config.py  main.py  models.py
backend/app/clients/: polymarket.py
backend/app/services/: query_builder.py  recommendations.py  scoring.py
backend/src/config/: settings.ts
backend/src/prompts/: load-prompt-md.ts
backend/src/prompts/agent-prompt/: candidate-scoring.system.md  query-planning.system.md
backend/src/prompts/md/: candidate-scoring.system.md  query-planning.system.md
backend/src/recommendations/: recommendations.module.ts  scoring.service.ts
backend/src/recommendations/clients/: openai.client.ts
backend/src/recommendations/query/: README.md
backend/src/recommendations/query/domain/: query-planning.schema.ts  query-planning.spec.ts  query.service.spec.ts  query.service.ts
backend/src/recommendations/query/integration/: query-planning.client.ts
backend/src/recommendations/retrieval/: README.md
backend/src/recommendations/retrieval/domain/: candidate-retriever.service.ts
backend/src/recommendations/retrieval/integration/: search.client.ts
backend/src/recommendations/types/: recommendations.ts
backend/tests/: test_api_response.py  test_query_builder.py  test_scoring.py
deploy/: README.md
docs/: README.md  backend-architecture-review.md  frontend-user-guide.md
(+43 files in other folders)
